resolved horizontal overflow on mobile view

--- a/src/scss/partials/responsive.scss
+++ b/src/scss/partials/responsive.scss
@@ -10,7 +10,6 @@
     .container #profile-info .profile-card-list > ul {
         display: grid;
         grid-template-columns: auto auto auto;
-        width: 100%;
     }
     .profile-info-section {
         display: grid;
